[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["francis zhuang <c480765125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
